# tkinter_app

./: .gitignore  HISTORY.md  justfile  pyproject.toml  requirements.txt
src/<app_name>/: __init__.py  config.py  constants.py  data_files.py  main.py  main_menu.py  module_caller.py  text.py
src/<app_name>/forms/: frm_config.py  frm_main.py  frm_modal.py  frm_xxx.py
tests/: test_config.py  test_version.py
tests/test_data/config/: config.toml
