[project]
name = "<app_name>"
version = "0.0.0a1"
description = "Add your description here"
authors = [
    {name = "Jeff Watkins",email = "jeffwatkins2000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clipboard>=0.0.4",
    "dotenv>=0.9.9",
    "psiutils>=1.0.2",
    "ruff>=0.15.19",
]

[dependency-groups]
dev = ['pytest', 'pytest-mock', 'icecream']

[build-system]
requires = ['uv-build']
build-backend = 'uv_build'


[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true
